--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta name="theme-color" content="#000000" />
         <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
         <title>Ayoub Hammal</title>
-        <script difer src="/src/index.tsx" type="module"></script>
+        <script src="/src/index.tsx" type="module"></script>
+        <script src="/node_modules/mathjax/es5/tex-chtml.js" id="MathJax-script" async></script>
     </head>
     <body>
         <div id="root"></div>
