--- a/404.html
+++ b/404.html
@@ -4,6 +4,6 @@
         <script>
           sessionStorage.redirect = location.href;
         </script>
-        <meta http-equiv="refresh" content="0;URL='/REPO_NAME_HERE'">
+        <meta http-equiv="refresh" content="0;URL='/'">
     </head>
 </html>
