--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <link rel="shortcut icon" type="image/ico" href="/resources/favicon.ico" />
         <title>{{.Title}}</title>
+        <link rel="stylesheet" href="/resources/style.css">
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
