--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,8 @@
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
-        {{.Body}}
+        <div class="container">
+            {{.Body}}
+        </div>
     </body>
 </html>
