transition to python

--- a/src/blogEntry.html
+++ b/src/blogEntry.html
@@ -1,9 +1,9 @@
-<A href="{{.Path}}">
+<A href="{path}">
     <div class="article-card">
-        <img class="article-card-image" src="{{.ImgPath}}" alt="{{.Title}}" />
+        <img class="article-card-image" src="{imgPath}" alt="{title}" />
         <div>
-            <h2 class="article-card-title">{{.Title}}</h2>
-            ({{.Date}}) {{.Description}}
+            <h2 class="article-card-title">{title}</h2>
+            ({date}) {description}
         </div>
     </div>
 </A>
