--- a/src/template.html
+++ b/src/template.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <link rel="shortcut icon" type="image/ico" href="/resources/favicon.ico" />
-        <title>{{.Title}}</title>
+        <title>{title}</title>
         <link rel="stylesheet" href="/resources/style.css">
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body>
         <div class="container">
-            {{.Body}}
+            {body}
         </div>
     </body>
 </html>
