--- a/src/footer.html
+++ b/src/footer.html
@@ -5,7 +5,7 @@
             Ayoub Hammal
         </div>
         <div class="footer-year">
-            Last updated: March, 2025
+            Last updated: {date}
         </div>
     </div>
 </footer>
