--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 <main class="main">
     <h1>Ayoub Hammal</h1>
     <hr/>
-    Computer Science/Artificial Intelligence student, looking for PhD opportunities.
+    I am a 2nd year PhD student in Natural Language Processing and Machine Learning.<br>
+    I am working currently on Large Language Models' alignment and reasoning.<br>
+    I mainly focus on developping test-time adaptation methods.<br>
+    But my personal interest spans from convex optimization to formal languages.
     <section>
         <h2 id="contact">Contact</h2>
         <hr/>
@@ -19,11 +22,27 @@
         <hr/>
         <ul>
             <li>
+
                 <div class="item-title">
-                    <span>Master 1 in Artificial Intelligence</span> <span>2022 - to this day</span>
+                    <span>PhD in Natural Language Processing</span> <span>2022 - to this day</span>
                 </div>
                 <div class="item-description">
-                    Paris-Saclay University. Valedictorian, Excellence honors.
+                    <em>LISN, Paris-Saclay University, CNRS.</em>
+                    <br/>
+                    Supervised by Pr. Pierre Zweigenbaum, Dr. Caio Corro and Pr. Miguel Couceiro.
+                    <br/>
+                    I am mainly interested in this thesis in large language models' (LLMs) alignment.
+                    <br/>
+                    I focus my work on test-time alignment and domain adaptation approaches.
+                </div>
+            </li>
+
+            <li>
+                <div class="item-title">
+                    <span>Master in Artificial Intelligence</span> <span>2022 - 2024</span>
+                </div>
+                <div class="item-description">
+                    <em>Paris-Saclay University.</em> Valedictorian, Excellence honors.
                 </div>
             </li>
 
@@ -32,7 +51,7 @@
                     <span>Master 1 in Intelligent Computer Systems</span> <span>2021 - 2022</span>
                 </div>
                 <div class="item-description">
-                    USTHB, Algiers. Valedictorian, Very Good honors.
+                    <em>USTHB, Algiers.</em> Valedictorian, Very Good honors.
                 </div>
             </li>
 
@@ -58,17 +77,65 @@
     <section>
         <h2 id="publications">Publications</h2>
         <hr/>
+        <h3 id="preprints">Preprints</h3>
         <ul>
             <li>
-                <b>Ayoub Hammal</b>, Mehdi Lerari, Khaled Zeraoulia and Youcef Hammal. <em>"An efficient resource allocation technique in Fog Environment"</em>, to appear in Springer Proceedings LNNS 646 (Lecture Notes in Networks and Systems) of ISDA 2022: 22nd International Conference on Intelligent Systems Design and Applications (Online), Seattle, WA, United States, December 12-14, 2022.
+                <div class="item-title">
+                    <strong><em>KAD: A Framework for Proxy-based Test-time Alignment with Knapsack Approximation Deferral</em></strong>
+                </div>
+                <div class="item-description">
+                    <strong>Ayoub Hammal</strong>, Pierre Zweigenbaum and Caio Corro.<br/>
+                    Submitted to <strong>EACL</strong> 2026 - European Chapter of the Association for Computational Linguistics.<br/>
+                    Paper: <a href="https://arxiv.org/abs/2510.27017">https://arxiv.org/abs/2510.27017</a><br/>
+                    Code: <a href="https://github.com/ayoubhammal/knapsack-approximation-deferral">https://github.com/ayoubhammal/knapsack-approximation-deferral</a>
+                </div>
+            </li>
+        </ul>
+        <h3 id="publications">Publications</h3>
+        <ul>
+            <li>
+                <div class="item-title">
+                    <strong><em>EuroBERT: Scaling Multilingual Encoders for European Languages</em></strong>
+                </div>
+                <div class="item-description">
+                    Nicolas Boizard, Hippolyte Gisserot-Boukhlef, Duarte Miguel Alves, Andre Martins, <strong>Ayoub Hammal</strong>, Caio Corro, Celine Hudelot, Emmanuel Malherbe, Etienne Malaboeuf, Fanny Jourdan, Gabriel Hautreux, João Alves, Kevin El Haddad, Manuel Faysse, Maxime Peyrard, Nuno M Guerreiro, Patrick Fernandes, Ricardo Rei and Pierre Colombo.<br/>
+                    <strong>COLM</strong> 2025 - Second Conference on Language Modeling.<br/>
+                    Paper: <a href="https://openreview.net/forum?id=jdOC24msVq">https://openreview.net/forum?id=jdOC24msVq</a>
+                </div>
             </li>
             <li>
-                Khaled Zeraoulia, <b>Ayoub Hammal</b>, Mehdi Lerari and Youcef Hammal. <em>"Stable Matching based Resource Allocation for Large-Scale Fog Computing"</em>, accepted on 03 April 2023 to appear in the International Journal of Computer Information Systems and Industrial Management Applications (IJCISIM - https://www.mirlabs.net/ijcisim/).
+                <div class="item-title">
+                    <strong><em>Few-shot domain adaptation for named-entity recognition via joint constrained k-means and subspace selection</em></strong>
+                </div>
+                <div class="item-description">
+                    <strong>Ayoub Hammal</strong>, Benno Uthayasooriyar and Caio Corro.<br/>
+                    <strong>COLING</strong> 2025 - Proceedings of the 31st International Conference on Computational Linguistics.<br/>
+                    Paper: <a href="https://aclanthology.org/2025.coling-main.662/">https://aclanthology.org/2025.coling-main.662/</a><br/>
+                    Code: <a href="https://github.com/ayoubhammal/ckss4ner">https://github.com/ayoubhammal/ckss4ner</a>
+                </div>
+            </li>
+            <li>
+                <div class="item-title">
+                    <strong><em>Stable Matching based Resource Allocation for Large-Scale Fog Computing</em></strong>
+                </div>
+                <div class="item-description">
+                    Khaled Zeraoulia, <strong>Ayoub Hammal</strong>, Mehdi Lerari and Youcef Hammal.<br/>
+                    <strong>IJCISIM</strong> 2023 - International Journal of Computer Information Systems and Industrial Management Applications 15.
+                </div>
+            </li>
+            <li>
+                <div class="item-title">
+                    <strong><em>An Efficient Resource Allocation Technique in a Fog Computing Environment</em></strong>
+                </div>
+                <div class="item-description">
+                    <strong>Ayoub Hammal</strong>, Mehdi Lerari, Khaled Zeraoulia, and Youcef Hammal.<br/>
+                    <strong>ISDA</strong> 2022 - International Conference on Intelligent Systems and Digital Applications.
+                </div>
             </li>
         </ul>
     </section>
     <section>
-        <h2 id="projects">Academic Experience</h2>
+        <h2 id="projects">Academic work</h2>
         <hr/>
         <ul>
             <li>
@@ -148,11 +215,53 @@
         <ul>
             <li>
                 <div class="item-title">
-                    <span>Eiffel Excellence scholarship</span> <span>2022</span>
+                    <span>Eiffel Excellence scholarship</span> <span>2022 - 2024</span>
                 </div>
                 <div class="item-description">
                     For the Artificial Intelligence Master of the University of Paris-Saclay.
                 </div>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2 id="thematic-schools">Thematic schools</h2>
+        <hr/>
+        <ul>
+            <li>
+                <div class="item-title">
+                    <span>EcAuTAL</span> <span>28 - 31/10/2024</span>
+                </div>
+                <div class="item-description">
+                    Organized at LISN, Paris-Saclay University.<br/>
+                    Link: <a href="https://ecautal.lisn.upsaclay.fr/">https://ecautal.lisn.upsaclay.fr/</a>
+                </div>
+            </li>
+            <li>
+                <div class="item-title">
+                    <span>DeepLearn</span> <span>21 - 25/07/2025</span>
+                </div>
+                <div class="item-description">
+                    Organized at Porto - Maia, Portugal.<br/>
+                    Link: <a href="https://deeplearn.irdta.eu/2025/">https://deeplearn.irdta.eu/2025/</a>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2 id="skills">Skills</h2>
+        <hr/>
+        <ul>
+            <li>
+                Programming and scripting: Python, C/C++, Java, JS, Rust, Lua, Bash...
+            </li>
+            <li>
+                Scientific programming: Numpy, Matplotlib...
+            </li>
+            <li>
+                Deeplearning libraries: Pytorch, Transformers...
+            </li>
+            <li>
+                Distributed computing: Slurm, Jean Zay...
             </li>
         </ul>
     </section>
