katex dep + test server

--- a/src/header.html
+++ b/src/header.html
@@ -3,8 +3,8 @@
     </div>
     <nav class="header-nav-container">
         <div class="header-nav-links">
-            <a href="/">Home</a>
-            <a href="/blog">Blog</a>
+            <a href="/index.html">Home</a>
+            <a href="/blog.html">Blog</a>
         </div>
     </nav>
     <hr/>
