--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="item-description">
                     <strong>Ayoub Hammal</strong>, Pierre Zweigenbaum and Caio Corro.<br/>
-                    Submitted to <strong>EACL</strong> 2026 - European Chapter of the Association for Computational Linguistics.<br/>
+                    <strong>EACL</strong> 2026 - European Chapter of the Association for Computational Linguistics.<br/>
                     Paper: <a href="https://arxiv.org/abs/2510.27017">https://arxiv.org/abs/2510.27017</a><br/>
                     Code: <a href="https://github.com/ayoubhammal/knapsack-approximation-deferral">https://github.com/ayoubhammal/knapsack-approximation-deferral</a>
                 </div>
@@ -205,6 +205,48 @@
                         <li>Then, I implemented and validated the technique in a simulation environment called IFogSim.</li>
                         <li>The algorithm is based on Gale-Shapley Matching algorithm, which I exploited and adapted to deploy requested services on heterogeneous Fog Nodes.</li>
                     </ul>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Invited Talks</h2>
+        <hr/>
+        <ul>
+            <li>
+                <div class="item-title">
+                    <span>Proxy-Based Test-Time Alignment with Knapsack Approximation Deferral</span> <span>01 / 2026</span>
+                </div>
+                <div class="item-description">
+                    @LIPN, RCLN Team
+                </div>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Teaching</h2>
+        <hr/>
+        <ul>
+            <li>
+                <div class="item-title">
+                    <span>Object-Oriented Modeling @ IUT Orsay</span> <span>2025 - 2026</span>
+                </div>
+                <div class="item-description">
+                    <ul>
+                        <li>UML diagrams and modeling.</li>
+                        <li>Design patterns.</li>
+                    <ul>
+                </div>
+            </li>
+            <li>
+                <div class="item-title">
+                    <span>Development Project Management @ IUT Orsay</span> <span>2025 - 2026</span>
+                </div>
+                <div class="item-description">
+                    <ul>
+                        <li>Development of a information system for managing IUT students and student groups according
+to various constraints.</li>
+                    <ul>
                 </div>
             </li>
         </ul>
