--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <main class="main">
     <h1>Ayoub Hammal</h1>
+    Paris region, France
     <hr/>
     I am a 2nd year PhD student in Natural Language Processing and Machine Learning.<br>
     I am working currently on Large Language Models' alignment and reasoning.<br>
@@ -297,13 +298,13 @@ to various constraints.</li>
                 Programming and scripting: Python, C/C++, Java, JS, Rust, Lua, Bash...
             </li>
             <li>
-                Scientific programming: Numpy, Matplotlib...
+                Scientific programming: Numpy, Pandas, Matplotlib, OpenCL...
             </li>
             <li>
                 Deeplearning libraries: Pytorch, Transformers...
             </li>
             <li>
-                Distributed computing: Slurm, Jean Zay...
+                Distributed computing: Slurm, Jean Zay, Distributed multi-gpu training/inference using DDP/FSDP...
             </li>
         </ul>
     </section>
